--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import "./assets/style/fonts";
+@import "./assets/style/variables";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +8,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: var(--background-color);
+}
+
+button,
+input {
+  font-family: $sans-serif;
+}
+
+img {
+  max-width:100% !important;
+}
+
+.filter-row {
+  margin:30px 0;
 }
 
 code {
